...
import com.github.swent.swisstravel.utils.NetworkUtils

/** Test tags for the profile screen. */
object ProfileScreenTestTags {
  const val SETTINGS_BUTTON = "settingsButton"
  const val UNFRIEND_BUTTON = "unfriendButton"
  const val DISPLAY_NAME = "displayName"
  const val PROFILE_PIC = "profilePic"
  const val BIOGRAPHY = "biography"
  const val ACHIEVEMENTS = "achievements"
  const val PINNED_TRIPS_TITLE = "pinnedTripsTitle"
  const val PINNED_TRIPS_EDIT_BUTTON = "pinnedTripsEditButton"
  const val PINNED_PICTURES_TITLE = "pinnedPicturesTitle"
  const val PINNED_PICTURES_LIST = "pinnedPicturesList"
  const val EMPTY_PINNED_PICTURES = "emptyPinnedPictures"
  const val PINNED_PICTURES_EDIT_BUTTON = "pinnedPicturesEditButton"
  const val CONFIRM_UNFRIEND_BUTTON = "confirmUnfriendButton"
...
