...
import com.github.swent.swisstravel.R
import com.github.swent.swisstravel.ui.trips.TripSortType

/** Object containing test tags for the [sortedTripListItems]. */
object SortedTripListTestTags {
  const val TITLE_BUTTON_ROW = "SortedTripListTitleButtonRow"
  const val TITLE = "SortedTripListTitle"
  const val SORTED_TRIP_LIST = "SortedTripList"

  /** Returns a unique test tag for the given [type] of sorting option. */
  fun getTestTagSortOption(type: TripSortType): String {
    return SortMenuTestTags.getTestTagSortOption(type)
  }
...
